objects/ZPF_BenchMar_AtciontStep__c.object
<CustomObject><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ZPF_Implementation_Benchmark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZPF Implementation Benchmark</label>
        <referenceTo>ZPF_Implementation_Benchmark__c</referenceTo>
        <relationshipLabel>ZPF BenchMar_ActiontStep</relationshipLabel>
        <relationshipName>ZPF_BenchMar_ActiontStep</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPF_Improvement_Action_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZPF Improvement Action Step</label>
        <referenceTo>ZPF_Improvement_Action_Step__c</referenceTo>
        <relationshipLabel>ZPF BenchMar_ActiontStep</relationshipLabel>
        <relationshipName>ZPF_BenchMar_ActiontStep</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>ZPF BenchMar_ActiontStep</label><nameField>
        <displayFormat>AB-{0000}</displayFormat>
        <label>BenchMar_AtciontStep Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>ZPF BenchMar_ActiontStep</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>